--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -17,6 +17,7 @@
 
 % Here is the start\index{start} of my document.
 
+\input{Sources/Nested/introduction.tex}
 
 \input{Sources/Traits/introduction.tex}
 
