--- a/Sources/Nested.tex
+++ b/Sources/Nested.tex
@@ -4,8 +4,15 @@
 \label{chap:nested}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+This chapter presents \namee, a calculus with disjoint intersection types that
+features both BCD-style subtyping and the merge operator, which we believe
+capture the essence of nested composition. We illustrate this by showing a neat
+solution to the Expression Problem based on family polymorphism. We then discuss
+the algorithmic aspects of \namee. The coherence property of \namee is discussed
+in \cref{chap:coherence:simple}.
 
-\input{Sources/Nested/introduction.tex}
+
+
 \input{Sources/Nested/overview.tex}
 \input{Sources/Nested/typesystem.mng}
 \input{Sources/Nested/algorithm.mng}
