--- a/Sources/Nested/typesystem.tex
+++ b/Sources/Nested/typesystem.tex
@@ -21,14 +21,14 @@ Henglein~\cite{Henglein_1994}. A full technical comparison between \namee and \o
 % \namee is a simple calculus with intersection types, the merge operator
 % and singleton records.
 For brevity of the meta-theoretic study, we do not
-consider primitive operations on natural numbers, or other primitive types.
+consider primitive operations on integers, or other primitive types.
 They can be easily added to the language, and our prototype implementation is
 indeed equipped with common primitive types and their operations.
-Metavariables $[[A]], [[B]], [[C]]$ range over types. Types include naturals
+Metavariables $[[A]], [[B]], [[C]]$ range over types. Types include the type of integers
 $[[nat]]$, a top type $[[Top]]$, function types $[[A -> B]]$, intersection types
 $[[A & B]]$, and singleton record types $[[ {l : A} ]]$. Metavariable $[[ee]]$
-ranges over expressions. Expressions include variables $[[x]]$, natural numbers
-$[[i]]$, a canonical top value $[[Top]]$, lambda abstractions $[[\x . ee]]$,
+ranges over expressions. Expressions include variables $[[x]]$, integers $[[i]]$,
+a canonical top value $[[Top]]$, lambda abstractions $[[\x . ee]]$,
 applications $[[ee1 ee2]]$, merges $[[ee1 ,, ee2]]$, annotated terms $[[ee : A]]$,
 singleton records $[[ {l = ee}]]$, and record selections $[[ee.l ]]$.
 
@@ -65,22 +65,28 @@ intersection types axiomatize that $[[A & B]]$ is the greatest lower bound of
 $[[A]]$ and $[[B]]$. \Rref{S-distArr} is perhaps the most interesting rule.
 This, so-called ``distributivity'' rule, describes the interaction between
 the subtyping relations for function types and those for intersection types.
-It can be shown\footnote{The full derivations are found in the appendix.} that the other direction ($[[A1 -> A2 & A3 <: (A1 -> A2) & (A1 -> A3)]]$)
-and the contravariant distribution ($[[ (A1 -> A2) & (A3 -> A2) <: A1 & A3 -> A2 ]]$) are both
-derivable from the existing subtyping rules. \Rref{S-distRcd}, which is not found in the original BCD system,
+Note that the other direction $[[A1 -> A2 & A3 <: (A1 -> A2) & (A1 -> A3)]]$
+and the contravariant distribution $[[ (A1 -> A2) & (A3 -> A2) <: A1 & A3 -> A2 ]]$ are both
+derivable from the existing subtyping rules, as shown below:
+  \begin{footnotesize}
+\begin{mathpar}
+  \inferrule*[right=\rref*{S-and}]
+  {  \inferrule*[right=\rref*{S-arr}]{ [[ A1 <: A1  ]] \\ [[ A2 & A3 <: A2  ]]  }{[[   A1 -> A2 & A3 <: A1 -> A2  ]]} \\
+    \inferrule*[right=\rref*{S-arr}]{ [[ A1 <: A1  ]] \\ [[ A2 & A3 <: A3  ]] }{[[ A1 -> A2 & A3 -> A1 -> A3      ]]}  }
+  {  [[ A1 -> A2 & A3 <: (A1 -> A2) & (A1 -> A3)  ]]  }
+\end{mathpar}
+\begin{mathpar}
+  \inferrule*[right=\rref*{S-trans}]
+  {  \inferrule*[right=\rref*{S-andl}]{ }{[[ (A1 -> A2) & (A3 -> A2) <: A1 -> A2   ]]} \\
+    \inferrule*[right=\rref*{S-arr}]{ [[ A1 & A3 <: A1  ]] \\ [[ A2 <: A2  ]] }{[[ A1 -> A2 <: A1 & A3 -> A2  ]]}  }
+  {  [[  (A1 -> A2) & (A3 -> A2) <: A1 & A3 -> A2  ]]   }
+\end{mathpar}
+  \end{footnotesize}
+\Rref{S-distRcd}, which is not found in the original BCD system,
 prescribes the distribution of records over intersection types. The two
 distributivity rules are the key to enable nested composition. The rule
 \rref*{S-topArr} is standard in BCD subtyping, and the new
 \rref{S-topRcd} plays a similar role for record types.
-
-% \paragraph{Property of Subtyping}
-% The subtyping relation is vacuously \textit{reflexive} and \textit{transitive}.
-
-
-%The remaining two
-%\rref{S-topArr,S-topRcd} may appear strange at first sight, but enable
-%a compact and elegant formulation of algorithmic subtyping (c.f. \cref{sec:alg}). \jeremy{any
-%  other justifications for these two rules?}
 
 \paragraph{Non-Algorithmic.}
 The subtyping relation in \cref{fig:subtype_decl} is clearly no more than a
@@ -88,6 +94,11 @@ specification due to the two subtyping axioms: \rref{S-refl,S-trans}. A sound
 and complete algorithmic version is discussed in \cref{sec:alg}. Nevertheless,
 for the sake of establishing coherence, the declarative subtyping relation is
 sufficient.
+
+
+\paragraph{Property of Subtyping.}
+The subtyping relation is vacuously \textit{reflexive} and \textit{transitive}.
+
 
 
 \subsection{Typing of \namee}
@@ -135,7 +146,8 @@ to continue ignoring the gray-shaded parts until \cref{sec:elaboration}.
 
 \begin{figure}[t]
   \centering
-  \drules[D]{$[[A ** B]]$}{Disjointness}{topL, topR, arr, andL, andR, rcdEq, rcdNeq, axNatArr, axArrNat, axNatRcd, axRcdNat, axArrRcd, axRcdArr}
+  \drules[D]{$[[A ** B]]$}{Disjointness}{topL, topR, arr, andL, andR, rcdEq, rcdNeq,ax}
+  \drules[Dax]{$[[A **a B]]$}{Disjointness axioms}{sym, intArr, intRcd,arrRcd}
   \caption{Disjointness}
   \label{fig:disjoint}
 \end{figure}
@@ -165,11 +177,11 @@ previous work~\cite{oliveira2016disjoint, alpuimdisjoint}.
 \begin{figure}[t]
   \centering
 \begin{tabular}{llll} \toprule
-  Target types & $[[T]]$ & $\Coloneqq$ & $[[nat]] \mid [[Unit]] \mid [[T1 * T2]] \mid [[T1 -> T2]] $ \\
-  Target terms & $[[e]]$ & $\Coloneqq$ & $[[x]] \mid [[i]] \mid [[unit]] \mid [[\x . e]] \mid [[e1 e2]] \mid [[<e1, e2>]] \mid [[c e]]$ \\
+  Types & $[[T]]$ & $\Coloneqq$ & $[[nat]] \mid [[Unit]] \mid [[T1 * T2]] \mid [[T1 -> T2]] $ \\
+  Terms & $[[e]]$ & $\Coloneqq$ & $[[x]] \mid [[i]] \mid [[unit]] \mid [[\x . e]] \mid [[e1 e2]] \mid [[<e1, e2>]] \mid [[c e]]$ \\
   Coercions & $[[c]]$ & $\Coloneqq$ & $ [[id]] \mid [[c1 o c2]] \mid [[top]] \mid [[c1 -> c2]] \mid [[<c1, c2>]] \mid [[pp1]] \mid [[pp2]] $ \\
   &  &  $\mid$ & $   [[distArr]] \mid [[topArr]]  $ \\
-  values & $[[v]]$ & $\Coloneqq$ & $[[unit]] \mid [[i]] \mid [[\x.e]] \mid  [[<v1, v2>]] \mid [[(c1 -> c2) v]] \mid [[distArr v]] \mid [[topArr v]] $ \\
+  Values & $[[v]]$ & $\Coloneqq$ & $[[unit]] \mid [[i]] \mid [[\x.e]] \mid  [[<v1, v2>]] \mid [[(c1 -> c2) v]] \mid [[distArr v]] \mid [[topArr v]] $ \\
   Typing contexts & $[[gg]]$ & $\Coloneqq$ & $[[empty]] \mid [[gg , x : T]]$ \\
   Evaluation Contexts & $[[EE]]$ & $\Coloneqq$ &  $  [[__]] \mid [[EE e]] \mid [[v EE]] \mid [[ < EE , e >  ]] \mid [[ < v , EE > ]] \mid [[ c EE  ]]$ \\ \bottomrule
 \end{tabular}
@@ -179,8 +191,8 @@ previous work~\cite{oliveira2016disjoint, alpuimdisjoint}.
 
 The operational semantics of \namee is given by elaborating source expressions
 $[[ee]]$ into target terms $[[e]]$. Our target language \tname is the standard
-simply-typed call-by-value $\lambda$-calculus extended with singleton records,
-products and coercions. The syntax of \tname is shown in \cref{fig:target}. The
+simply-typed call-by-value $\lambda$-calculus extended with products and coercions.
+The syntax of \tname is shown in \cref{fig:target}. The
 meta-function $| \cdot |$ shown in \cref{def:type:translate} transforms \namee
 types to \tname types, and extends naturally to typing contexts.
 
@@ -190,7 +202,7 @@ types to \tname types, and extends naturally to typing contexts.
     | [[Top]] | &= \langle \rangle \\
     | [[A -> B]]  | &= [[ | A | -> | B |  ]] \\
     | [[ A & B  ]] | &= [[ | A | * | B |  ]] \\
-    | \recordType{l}{A} | &= \recordType{l}{| A |}
+    | \recordType{l}{A} | &= | A |
   \end{align*}
 \end{definition}
 
